# kiali-demo

./: Dockerfile  README.md  app-deployment.yaml  czech-vs-delay-short.yaml  czech-vs-delay.yaml  czech-vs-fault-90.yaml  czech-vs-fault.yaml  pyproject.toml  spanish-retry-100.yaml  spanish-retry.yaml  spanish-timeout.yaml
src/kiali_app/: __init__.py  czech.py  english.py  greet.py  spanish.py
